<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Welcome to Rabbit Collection!</string>
    <string name="tictactoe">TIC TAC TOE</string>
    <string name="hanoi">TOWER OF HANOI</string>
    <string name="hangman">HANGMAN</string>
    <string name="asteroidsearth">ASTEROIDS - Earth Attack</string>
    <string name="mazerunner">MAZE RUNNER</string>
    <string name="garbageselector">GARBAGE RECYCLE</string>
    <string name="memorygame">MEMORY GAME</string>
    <string name="rockpaperscissors">ROCK PAPER AND SCISSORS</string>
    <string name="dodgeit">DODGE IT</string>
    <string name="crazybridge">CRAZY BRIDGE</string>
    <string name="cloudhockey">CLOUD HOCKEY</string>
    <string name="player">PLAYER: O</string>
    <string name="pc">PC: X</string>
    <string name="timer">TIMER:</string>
    <string name="level">LEVEL:</string>
    <string name="besttime">BEST TIME</string>
    <string name="bestscore">BEST SCORE</string>
    <string name="best">BEST</string>
    <string name="moves">MOVES:</string>
    <string name="restart">Restart</string>
    <string name="youwon">You WIN</string>
    <string name="youloose">You LOOSE</string>
    <string name="draw">DRAW</string>
    <string name="congrats">Congratulations!</string>
    <string name="tip">TIP</string>
    <string name="score">SCORE:</string>
    <string name="score2">SCORE</string>
    <string name="app_name">Rabbit Game Pack Lite</string>
    <string name="nextlevel">NEXT LEVEL</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="question_restart">"The game is PAUSED 
Would you like to RESTART the game now?"</string>
    <string name="nobeat">Does Not Beat</string>
    <string name="beat">Beat</string>
    <string name="s_paper">Paper</string>
    <string name="s_rock">Rock</string>
    <string name="s_scissor">Scissor</string>
    <string name="playerbeat">Player beat PC</string>
    <string name="pcbeat">PC beat Player</string>
    <string name="bestseq">Best Won Sequence</string>
    <string name="wonseq">Won Sequence</string>
    <string name="firemode">MODE:</string>
    <string name="fireshoots">SHOOTS:</string>
    <string name="wins">WINS</string>
    <string name="bestwins">BEST WINS</string>
    <string name="gol">GoOoOooll!</string>
    <string name="bonustime">+Time</string>
    <string name="bonuspoints">+Points</string>
    <string name="hang_good">Good One!</string>
    <string name="hang_bad">You Lose!</string>
    <string name="game_record">New Record!</string>
    <string name="country">COUNTRY</string>
    <string name="planets">PLANET</string>
    <string name="colors">COLOR</string>
    <string name="animals">ANIMAL</string>
    <string name="fruits">FRUIT</string>
    <string name="paper">Paper</string>
    <string name="metal">Metal</string>
    <string name="plastic">Plastic</string>
    <string name="paper_plastic">Paper and Plastic</string>
    <string name="organic">Organic</string>
    <string name="advert_txt">"Advertised Paid Game
 Wait to play"</string>
    <string name="help_title">TITLE</string>
    <string name="help_intro">INTRO</string>
    <string name="help_howtoplay">HOW TO PLAY</string>
    <string name="help_asteroids_intro">The PLANET is been attacked by a rain of asteroids! Protect our cities with the new tank XK1 with laser weapons! Be aware that aliens may appear! Shoot them all to gain new laser weapons!</string>
    <string name="help_asteroids_tutorial">Click on the SCREEN (sky area) to fire your laser cannon! Use the BLUE ARROWS at bottom LEFT and RIGHT corners to move your tank. You will lose if you or all buildings are destroyed.</string>
    <string name="help_cloudhockey_intro">Cloud hockey is a simple, fast and fun hockey game between two moons! You have to defeat the PC player using the BONUS CLOUD that will give you special advantages to win the game.</string>
    <string name="help_cloudhockey_tutorial">Click over your moon (BLUE) and drag it to hit the BALL. To a better control you should try to predict the ball future location and put your moon there. Hit the BONUS CLOUD with the BALL (SUN) to gain special conditions in the game. The first player to score 2 points, win the game.</string>
    <string name="help_crazybridge_intro">Evil enemies of the forest are coming to get you and your gold! You’re surrounded, for how long you can hold enemies waves?</string>
    <string name="help_crazybridge_tutorial">Protect your GOLD at any cost hitting enemy’s waves! Use LEFT and RIGHT arrows at BOTTOM LEFT and RIGHT corners to move the PLAYER. To hit the ENEMIES click on the LEFT or RIGHT side of the PLAYER.</string>
    <string name="help_dodgeit_intro">For how long you can dodge it from evil BULLETS on the sky?! Control the robot and fly through the skies dodging from bullets to show how good you are in this addictive game!</string>
    <string name="help_dodgeit_tutorial">To move the PLAYER, use LEFT and RIGHT buttons at the BOTTOM LEFT and RIGHT corners. Don’t PRESS the buttons for TOO long because you will move very quickly and will end up falling. To JUMP you need to click over the TOP of your ROBOT. The intensity of the JUMP is based on the DISTANCE of your click to the robot, so for a VERY HIGH jump, you need to click very FAR (TOP) from the robot. To SMALL jump, click near the TOP of the ROBOT. Once you dominate the intensity of the JUMP you will master the game!</string>
    <string name="help_garbagerecycle_intro">Garbage recycle is an educative game used to help children’s understand how the garbage can be separated to recycle.</string>
    <string name="help_garbagerecycle_tutorial">The GARBAGE will FALL near the TREE, you have to CLICK and DRAG the GARBAGE to the correct RECYCLE BOX. Once you put the GARBAGE over the RECYCLE BOX, the KIND of GARBAGES that the BOX should receive will be displayed. You need to get ALL GARBAGES before the time expires. Good</string>
    <string name="help_hangman_intro">Classic HANGMAN game.</string>
    <string name="help_hangman_tutorial">Try to guess the KEY word using the TIP and guessing possible letters of the word. Once you TOUCH (AND HOLD) the BUTTON, the selected OPTION will be DISPLAYED at the RIGHT side of the SCREEN. If you don’t want to CONFIRM this OPTION, you should move your finger on the SCREEN and release the TOUCH. Using this approach you will never make a mistake due the small size of the button.</string>
    <string name="help_hanoi_intro">The LOGIC game HANOI.</string>
    <string name="help_hanoi_tutorial">The objective of the game is to move all BLOCKS from the LEFT column to the last RIGHT column. There is only one rule of movement: You can’t place a BIG BLOCK over a SMALL BLOCK. To move the block, just CLICK on the desired COLUMN (With the block that you want to move) and DRAG the BLOCK to the column that you want. Don’t forget to follow the rule! Remember also that you always get the TOP block of the COLUMN when you select a COLUMN to drag a block.</string>
    <string name="help_mazerunner_intro">Run through the maze before the TIME expires! This addictive game will let you crazy!</string>
    <string name="help_mazerunner_tutorial">Move the PLAYER (Red circle) though the MAZE using the 4 Buttons at TOPEFTIGHTOTTOM corners. You start at the place with a YELLOW SIGN and should reach the place with the RED CIRCLE SIGN. Use the KEYS available at the map to open all doors. Time and Point bonus (STARS) are available at the maze.</string>
    <string name="help_memorygame_intro">Try out the MEMORY GAME and see if your memory is still fresh!</string>
    <string name="help_memorygame_tutorial">Click on the table to see what card is hidden at the back! Find the PAIRS to make points and move to the next level. Be careful, don’t let the time expire or you will lose!</string>
    <string name="help_rockpaperscissors_intro">The traditional Rock Paper or Scissors game!</string>
    <string name="help_rockpaperscissors_tutorial">Select ROCK, PAPER or Scissors at the BOTTOM menu and wait the time expires to see if you can win the PC. The CLOUD at the TOP of the PC shows what the ROBOT is thinking!</string>
    <string name="help_tictactoe_intro">Traditional TIC TAC TOE game!</string>
    <string name="help_tictactoe_tutorial">Can you win the PC? Click on the table to make your selection and try to make a line of 3 “O” to win! You can try to form lines in the X axis, Y axis and the diagonal!</string>
    <string name="bt_play">Play</string>
    <string name="bt_setup">Setup</string>
    <string name="bt_credits">Credits</string>
    <string name="bt_action">Action</string>
    <string name="bt_puzzle">Puzzle</string>
    <string name="bt_classic">Classic</string>
    <string name="bt_back">Back</string>
    <string name="bt_clear">Clear Data</string>
    <string name="bt_sound_on">Sound On</string>
    <string name="bt_sound_off">Sound Off</string>
    <string name="wait_dialog_title">Please Wait...</string>
    <string name="dialog_clear_title">Clear Data</string>
    <string name="dialog_clear_message">Are your sure you want to clear all data?</string>
    <string name="software_title">Software Enginners:</string>
    <string name="software_cast">"Eduardo M. Sampaio
Samuel C. Bastos
Thiago R. de Assis
Victor P. C. Teixeira"</string>
    <string name="sound_title">FX Sounds:</string>
    <string name="sound_cast">Soungle and Incompetech</string>
    <string name="credit_link">"RedRabbit Interactive 2010 All rights reserved
www.redrabbitinteractive.com"</string>
    <string name="bt_store">Store</string>
</resources>
