<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/redrabbit.rabbitcollection1lite">
    <ImageView android:id="@id/logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/logo" android:layout_centerHorizontal="true" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="true" android:layout_below="@id/logo" android:layout_alignParentBottom="true">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:paddingLeft="35.0dip" android:paddingRight="35.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <redrabbit.rabbitcollection1lite.GameButtonView android:id="@id/BT_MazeRunner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" app:game_icon="@drawable/bt_maze" app:game_name="@string/mazerunner" app:game_intro="@string/help_mazerunner_intro" app:game_tutorial="@string/help_mazerunner_tutorial" />
            <redrabbit.rabbitcollection1lite.GameButtonView android:id="@id/BT_Hanoi" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" app:game_icon="@drawable/bt_hanoi" app:game_name="@string/hanoi" app:game_intro="@string/help_hanoi_intro" app:game_tutorial="@string/help_hanoi_tutorial" />
            <redrabbit.rabbitcollection1lite.GameButtonView android:id="@id/BT_Garbage" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" app:game_icon="@drawable/bt_garbage" app:game_name="@string/garbageselector" app:game_intro="@string/help_garbagerecycle_intro" app:game_tutorial="@string/help_garbagerecycle_tutorial" />
            <redrabbit.rabbitcollection1lite.GameButtonView android:id="@id/BT_Memory" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" app:game_icon="@drawable/bt_memory" app:game_name="@string/memorygame" app:game_intro="@string/help_memorygame_intro" app:game_tutorial="@string/help_memorygame_tutorial" />
            <Button android:id="@id/BT_Back" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/bt_back" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>