<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/redrabbit.rabbitcollection1lite">
    <ImageView android:id="@id/logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/logo" android:layout_centerHorizontal="true" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="true" android:layout_below="@id/logo" android:layout_alignParentBottom="true">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:paddingLeft="35.0dip" android:paddingRight="35.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <redrabbit.rabbitcollection1lite.GameButtonView android:id="@id/BT_Asteroids" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" app:game_icon="@drawable/bt_asteroids" app:game_name="@string/asteroidsearth" app:game_intro="@string/help_asteroids_intro" app:game_tutorial="@string/help_asteroids_tutorial" />
            <redrabbit.rabbitcollection1lite.GameButtonView android:id="@id/BT_DodgeIt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" app:game_icon="@drawable/bt_dodgeit" app:game_name="@string/dodgeit" app:game_intro="@string/help_dodgeit_intro" app:game_tutorial="@string/help_dodgeit_tutorial" />
            <redrabbit.rabbitcollection1lite.GameButtonView android:id="@id/BT_CloudHockey" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" app:game_icon="@drawable/bt_cloud" app:game_name="@string/cloudhockey" app:game_intro="@string/help_cloudhockey_intro" app:game_tutorial="@string/help_cloudhockey_tutorial" />
            <redrabbit.rabbitcollection1lite.GameButtonView android:id="@id/BT_CrazyBridge" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" app:game_icon="@drawable/bt_crazy" app:game_name="@string/crazybridge" app:game_intro="@string/help_crazybridge_intro" app:game_tutorial="@string/help_crazybridge_tutorial" />
            <Button android:id="@id/BT_Back" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/bt_back" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>