<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/redrabbit.rabbitcollection1">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="balblalb">
        <TextView android:textColor="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/hello" />
        <Button android:textSize="10.0pt" android:id="@id/Play_ASTEROIDSEARTH" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/asteroidsearth" />
        <Button android:textSize="10.0pt" android:id="@id/Play_MAZERUNNER" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/mazerunner" />
        <Button android:textSize="10.0pt" android:id="@id/Play_TICTAC" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tictactoe" />
        <Button android:textSize="10.0pt" android:id="@id/Play_HANOI" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/hanoi" />
        <Button android:textSize="10.0pt" android:id="@id/Play_HANGMAN" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/hangman" />
        <Button android:textSize="10.0pt" android:id="@id/Play_DODGEIT" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dodgeit" />
        <Button android:textSize="10.0pt" android:id="@id/Play_CLOUDHOCKEY" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cloudhockey" />
        <Button android:textSize="10.0pt" android:id="@id/Play_CRAZYBRIDGE" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/crazybridge" />
        <Button android:textSize="10.0pt" android:id="@id/Play_GARBAGESELECTOR" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/garbageselector" />
        <Button android:textSize="10.0pt" android:id="@id/Play_MEMORYGAME" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/memorygame" />
        <Button android:textSize="10.0pt" android:id="@id/Play_ROCKPAPERSCISSORS" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/rockpaperscissors" />
    </LinearLayout>
</ScrollView>