<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/redrabbit.rabbitcollection1lite">
    <ImageView android:id="@id/logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/logo" android:layout_centerHorizontal="true" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="true" android:layout_below="@id/logo" android:layout_alignParentBottom="true">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:paddingLeft="35.0dip" android:paddingRight="35.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <redrabbit.rabbitcollection1lite.GameButtonView android:id="@id/BT_Hangman" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" app:game_icon="@drawable/bt_hangman" app:game_name="@string/hangman" app:game_intro="@string/help_hangman_intro" app:game_tutorial="@string/help_hangman_tutorial" />
            <redrabbit.rabbitcollection1lite.GameButtonView android:id="@id/BT_TicTacToe" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" app:game_icon="@drawable/bt_tictactoe" app:game_name="@string/tictactoe" app:game_intro="@string/help_tictactoe_intro" app:game_tutorial="@string/help_tictactoe_tutorial" />
            <redrabbit.rabbitcollection1lite.GameButtonView android:id="@id/BT_RockPaperScissors" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" app:game_icon="@drawable/bt_rock" app:game_name="@string/rockpaperscissors" app:game_intro="@string/help_rockpaperscissors_intro" app:game_tutorial="@string/help_rockpaperscissors_tutorial" />
            <Button android:id="@id/BT_Back" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/bt_back" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>