<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="top" android:orientation="vertical" android:background="@drawable/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/CreditsScrollView" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/redrabbit" />
            <TextView android:textSize="25.0dip" android:gravity="center" android:id="@id/SoftwareCreditsTextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/software_title" />
            <TextView android:textSize="15.0dip" android:gravity="center" android:id="@id/SoftwareCastTextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/software_cast" />
            <TextView android:textSize="25.0dip" android:gravity="center" android:id="@id/SoundCreditsTextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sound_title" />
            <TextView android:textSize="15.0dip" android:gravity="center" android:id="@id/SoundCastTextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/sound_cast" />
            <TextView android:textSize="15.0dip" android:gravity="center" android:autoLink="web" android:id="@id/CreditsLinkView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/credit_link" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>