<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/logo" android:layout_centerHorizontal="true" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="true" android:layout_below="@id/logo" android:layout_alignParentBottom="true">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:paddingLeft="35.0dip" android:paddingRight="35.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <Button android:id="@id/BT_Play" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/bt_play" />
            <Button android:id="@id/BT_Setup" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/bt_setup" />
            <Button android:id="@id/BT_Credits" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/bt_credits" />
            <Button android:id="@id/BT_Store" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/bt_store" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>