<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" android:layout_above="@id/HelpBack" android:layout_below="@id/logo">
        <LinearLayout android:gravity="left" android:orientation="vertical" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="25.0dip" android:id="@id/HelpTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_intro" />
            <TextView android:textSize="15.0dip" android:id="@id/HelpIntro" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_howtoplay" />
            <TextView android:textSize="15.0dip" android:id="@id/HelpTutorial" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
    <Button android:id="@id/HelpBack" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/bt_back" android:layout_alignParentBottom="true" />
</RelativeLayout>